--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,6 +12,16 @@
 
     <!-- TODO #3 - Use the same list display from search.html -->
 
+    <div>
+
+        <table class="job-listing" th:each="job : ${jobs}">
+            <tr th:each="item : ${job}">
+                <td th:text="${item.key}"></td>
+                <td th:text="${item.value}"></td>
+            </tr>
+        </table>
+    </div>
+
 </div>
 
 </body>
